--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,37 @@
 
+<!doctype html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Squamiferum.com for sale." />
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Megrim&display=swap" rel="stylesheet"> 
+
+	<title>Squamiferum.com for sale</title>
+	<style>
+		body,
+		html {
+			height: 100%;
+		}
+		
+		.alfa {
+			font-family: 'Megrim', cursive;
+		}
+	</style>
+</head>
+
+<body class="bg-dark">
+	<div class="container d-flex h-100">
+		<div class="row align-self-center text-center w-100">
+			<h1 class="alfa"><a href="https://sedo.com/search/details/?domain=squamiferum.com" class="text-decoration-none"><span class="text-primary fw-bold">Squamiferum<span class="text-warning fw-bold">.com</span></span></a></h1>
+			<h6><a href="https://sedo.com/search/details/?domain=squamiferum.com" class="btn btn-success fw-bold" target="_blank">Make an offer</a></h6>
+		</div>
+	</div>
+</body>
+
+</html>
