--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 <body class="bg-dark">
 	<div class="container d-flex h-100">
 		<div class="row align-self-center text-center w-100">
-			<h1 class="alfa"><a href="https://sedo.com/search/details/?domain=squamiferum.com" class="text-decoration-none"><span class="text-primary fw-bold">Squamiferum<span class="text-warning fw-bold">.com</span></span></a></h1>
+			<h1 class="alfa"><a href="https://sedo.com/search/details/?domain=squamiferum.com" class="text-decoration-none"><span class="text-primary fw-bold">Squamiferum</span>.com</a></h1>
 			<h6><a href="https://sedo.com/search/details/?domain=squamiferum.com" class="btn btn-success fw-bold" target="_blank">Make an offer</a></h6>
 		</div>
 	</div>
